// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExplorerDomainsList.vue > Should be disabled 1`] = `
"<div class="v-card v-card--disabled v-theme--light v-card--density-default v-card--variant-elevated" tabindex="-1">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <new-explorer-domain-modal-stub></new-explorer-domain-modal-stub>
  <div class="v-card-text">
    <div class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat mb-4" role="alert">
      <!----><span class="v-alert__underlay"></span>
      <!---->
      <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
      <div class="v-alert__content">
        <!---->Upgrade your plan to activate domain aliases.
      </div>
      <!---->
      <!---->
    </div>
    <div class="v-list v-theme--light v-list--density-default v-list--one-line py-0 mb-4" tabindex="0" role="listbox">
      <explorer-domain-stub domain="[object Object]"></explorer-domain-stub>
      <explorer-domain-stub domain="[object Object]"></explorer-domain-stub>
    </div>
    <div><button type="button" class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Add Domain Alias</span>
        <!---->
        <!---->
      </button></div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`ExplorerDomainsList.vue > Should display domains list 1`] = `
"<div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <new-explorer-domain-modal-stub></new-explorer-domain-modal-stub>
  <div class="v-card-text">
    <!--v-if-->
    <div class="v-list v-theme--light v-list--density-default v-list--one-line py-0 mb-4" tabindex="0" role="listbox">
      <explorer-domain-stub domain="[object Object]"></explorer-domain-stub>
      <explorer-domain-stub domain="[object Object]"></explorer-domain-stub>
    </div>
    <div><button type="button" class="v-btn v-btn--elevated v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator="">Add Domain Alias</span>
        <!---->
        <!---->
      </button></div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;
